--- a/www/index.html
+++ b/www/index.html
@@ -18,6 +18,11 @@
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
 
+    <!-- bootstrap/angularjs js -Shanika-->
+    <script src="lib/js/ui-bootstrap-tpls-0.13.4.min.js"></script>
+
+    <script src="lib/js/angular-count-to.min.js"></script>
+
     <!-- your app's js -->
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
