the one with progress bar-s

--- a/www/index.html
+++ b/www/index.html
@@ -6,7 +6,6 @@
     <title>Electricity Usage</title>
 
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
 
     <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
     <link href="css/ionic.app.css" rel="stylesheet">
@@ -22,11 +21,18 @@
     <script src="lib/js/ui-bootstrap-tpls-0.13.4.min.js"></script>
 
     <script src="lib/js/angular-count-to.min.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/services.js"></script>
+
+
+    <!--Custo css-->
+    <link href="css/style.css" rel="stylesheet">
+
   </head>
   <body ng-app="electricityUsage">
     <!--
