--- a/www/index.html
+++ b/www/index.html
@@ -7,6 +7,12 @@
 
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
 
+    <!-- bootstrap css //add the downloaded files-->
+    <link rel="stylesheet" href="lib/bootstrap/css/bootstrap.min.css">
+
+    <!--Custom css-->
+    <link href="css/style.css" rel="stylesheet">
+
     <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
     <link href="css/ionic.app.css" rel="stylesheet">
     -->
@@ -18,20 +24,15 @@
     <script src="cordova.js"></script>
 
     <!-- bootstrap/angularjs js -Shanika-->
+    <!--<script src="lib/bootstrap/js/bootstrap.min.js"></script>-->
     <script src="lib/js/ui-bootstrap-tpls-0.13.4.min.js"></script>
 
     <script src="lib/js/angular-count-to.min.js"></script>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/services.js"></script>
-
-
-    <!--Custo css-->
-    <link href="css/style.css" rel="stylesheet">
 
   </head>
   <body ng-app="electricityUsage">
