--- a/www/index.html
+++ b/www/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="lib/bootstrap/css/bootstrap.min.css">
 
     <!-- chart css-->
-    <link rel="stylesheet" href="bower_components/angular-chart.js/dist/angular-chart.css">
+    <link rel="stylesheet" href="lib/angular-chart.js/dist/angular-chart.min.css">
 
     <!--Custom css-->
     <link href="css/style.css" rel="stylesheet">
@@ -32,7 +32,9 @@
 
     <script src="lib/js/angular-count-to.min.js"></script>
     <!-- chart.js-->
-    <script src="bower_components/angular-chart.js/dist/angular-chart.js"></script>
+    <script src="lib/angular/angular.min.js"></script>
+    <script src="lib/Chart.js/Chart.min.js"></script>
+    <script src="lib/angular-chart.js/dist/angular-chart.min.js"></script>
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
