--- a/www/index.html
+++ b/www/index.html
@@ -29,6 +29,7 @@
     <!-- bootstrap/angularjs js -Shanika-->
     <!--<script src="lib/bootstrap/js/bootstrap.min.js"></script>-->
     <script src="lib/js/ui-bootstrap-tpls-0.13.4.min.js"></script>
+    <script src="lib/bootstrap/js/bootstrap.min.js"></script>
 
     <script src="lib/js/angular-count-to.min.js"></script>
     <!-- chart.js-->
