date picker was added

--- a/www/index.html
+++ b/www/index.html
@@ -41,6 +41,9 @@
     <script src="js/controllers.js"></script>
     <script src="js/services.js"></script>
 
+    <!-- path to ionic/angularjs -->
+    <script src="lib/ionic-datepicker/dist/ionic-datepicker.bundle.min.js"></script>
+
   </head>
   <body ng-app="electricityUsage">
     <!--
